# Simulation_Engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py
agents/: __init__.py  analysis_agent.py  domain_agent.py  optimization_agent.py  orchestrator.py  runner_agent.py  scenario_agent.py  visualization_agent.py
api/: main.py
api/routers/: optimize.py  results.py  simulate.py
core/: __init__.py  analysis.py  interfaces.py  monte_carlo.py  runner.py  scenario_generator.py
domains/: __init__.py  base.py
domains/energy_roi/: __init__.py  schema.py  simulator.py
domains/foot_traffic/: __init__.py  schema.py  simulator.py
domains/freelance_finance/: __init__.py  schema.py  simulator.py
domains/machine_maintenance/: __init__.py  schema.py  simulator.py
domains/marketing_strategy/: __init__.py  schema.py  simulator.py
domains/supply_chain/: __init__.py  agent.py  schema.py  simulator.py
registry/: __init__.py  domain_registry.py
storage/: __init__.py  result_store.py
tasks/: celery_app.py
tests/test_core/: test_monte_carlo.py  test_scenario_generator.py
tests/test_domains/: test_supply_chain.py
ui/: api_client.py  app.py
